# nexus

./: .gitignore  CMakeLists.txt  GameDesign.md  README.md  build.ps1
StoryBible/: _Index.md
StoryBible/Chapters/: Chapter 0 - Prólogo (In Medias Res).md  Chapter 1 - El Día que el Cielo se Rompió.md  Chapter 2 - La Carrera por el Poder.md  Chapter 3 - Guerra Fría.md  Chapter 4 - Cenizas y Traición.md  Chapter 5 - El Rift Absoluto.md
StoryBible/Characters/: Amara Diallo.md  Anya Volkov.md  Archiliche Morvyn.md  Celene Valfort.md  Daisuke.md  El Archivista.md  El Protagonista.md  Farid Al-Rashid.md  Gregor Malyk.md  Jack Morrison.md  Kael'Tharis.md  Kane Mercer.md  Layla Al-Rashid.md  Lord Vykar.md  Marcos Ureña.md  Nia.md  Orath Drak.md  Ryusei Takeda.md  Sarah Voss.md  Syra'Vyn.md  Tariq Hassani.md  Valentina Rojas.md  Vehn'Dor.md  Viktor Drakov.md  Yuki Aosora.md
StoryBible/Enemies/: Atherion.md  Drak'Vor.md  Nethara.md  Política de los Planos.md  Thyra.md  Vorrakh.md  Zhul'Ka.md  _Facciones Enemigas Index.md
StoryBible/Factions/: Al-Rashid.md  Arkhos.md  Kaijin.md  Severyn.md  Umbara.md  Valdoria.md  Veranthos.md
StoryBible/Lore/: Cosmología - El Nexo.md  Cristales de Aura.md  El Aura.md  La Alianza Internacional.md  Los Rifts.md  Propósitos y Alianzas Secretas.md  Sistema de Rangos.md  (+1 more)
StoryBible/World/: Timeline.md  (+3 more)
src/: Game.cpp  Game.h  combat.cpp  combat.h  drops.cpp  drops.h  main.cpp  persistence.cpp  persistence.h  progression.cpp  progression.h  rift.cpp  rift.h  types.h  ui.cpp  ui.h  utils.cpp  utils.h
web-app/: package-lock.json  package.json
(+13 files in other folders)
